--- a/Suppliers/Forms/Form1.resx
+++ b/Suppliers/Forms/Form1.resx
@@ -181,54 +181,54 @@
   </data>
   <data name="picExit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAArESURBVHhe7VvrcxTHEedDnpWk8g+k8k4q+RdSlUpV8j3lfHfsJB+chLtDYJuXBegEdpVBupOh
-        ihQn6XZXL7DlgEUAi4cNwjbIVmwisAA7RjwNWEK6t447ys6kf7Mzp9Ve795DJ8cEuupXUt3MdE/3znT3
-        9Owue0gP6SE9pKWi8B/Mr0UC1m8iQau5PWgZkaD5BmGScJOQUMD/lwgn0ac9ZD7TFjR+jbGKzf1FO5fv
-        /GY0YDxOCh0l5AmiTmDskUjIeqzt6d5vKPZfXIou7/5xNGjE6GlnnYrEVxji4KpuceqpLvH+6i5xZU2n
-        uEG4tdbG9bUx+du51Z2yz8GVcdFNY5w8IgEzQ9i1LWT9SIn74lDHSvP77UFzD030U0w2ShhoiotRUuZj
-        UnB2XawuYOzpp7olL/BUxoCMgfZA9/eU+P8dhcODX4kEjPU0oTlM7oWgIV6lJ319EUp74dqamDhEvF8I
-        lQyRoxWxNvZE7MtqOp8vdfzV+CEt9X+qyYihVXFxk5YyN/lGAqsCsrTcSMgcawv2/kBN6/MhWu6PRINW
-        GhPopL16nvY1N9lKyJ99V+TH32PbKmGC/EUspPxEwEjRw/itmt7SEpYdCf0PBGO5T6+rf7nfS16W4Nqq
-        wSeEIXKY0gg0Jwqha9Q0l4aiIWODEiZOPlnfU3disQbQOEGOUs8LOYSabmOJvPByCIA3HiPvzk2kVjTK
-        AADmpCMF/f2LmnZjKBro+R0x/gzMa1E+sdkQ2YPHRGb3AbbdzwCZgQNyLHhw7RzeebpLrwQKlQ3yCdtW
-        mD8hhtLhjTzZzQp2A5POHT4uitMfSQULl8+z/fwMULwyIdvAIzd8XCQ2VCd7hLamMkJq0UmTzOOD5jgY
-        7iNnwwl0I921VxRvflhSLv/umEi297N9/QyQjO4W+XfeFvcSk7JP5sVDbD8Oe0uO0TizI7Tjq0qd2omY
-        tIBRF4UbeFxOWAnNnSL3+kmasFKcQlxq+x6+r4KfATSSbf0iu++wSISr3wq3KR/p1CGSDmFKndqIYv3P
-        iEERjuVDirmcoBJI+fwYPS0oNDMpJzy7vnJ4rMYAbiQjAzZ/ksm1a1ygOdsGMAuRQM9PlVrVEw0cBIP9
-        lHVxAkqA8liqpEjx1gcVn7oT9Rhg7uRbckz+9OmKRp7PGK3dSq3qqGN5789p4GfIuysdZnKvjdjK077H
-        vuX6aCRowskNhkiHe0W6ta9kAPyP35IbDerjH2WSbQOieNv2MbmjI2wfDZw4O+xV8GlNq4CWvwXLHarw
-        9NPd++w9f+eSSHV4P3konmrpEZktAwugDeD+HX0xhuMFpHYOiiLJlMYzh9g+Ggf0KgiYcaWePz3/ROzb
-        NCCPvX+VLMgxBZJbTLnkMYnsXtqTrnY4zRlCckNcZDYvVFDDywA2+kWy2X4A04qnE4gKGFu8cVEkNnk/
-        qCu0gqUB6MS6dU38W0pNb4qEjD9jwO4mf6+L5YcJyMPM+oVtU4SdtH3MlaaYCnPK2fA3wICYah0gHgbx
-        MsS0+6RJMhFpMB7bcEGbC6gnSCOEzD8pNb2JDhTH0BlZFccMSDxr0RKkJIeWP+f08OTNJml1UsAS6TpW
-        QILGGDQWPCx6GODplpPc2iujDraDX8aIwowywLBSk6foqsGvU8cClv8thpEGsjxMHKGPa8f+nQ73C4sU
-        2B6yxGwdBrhF4ztoFVmrLDFNTtLLJyAagEd26AjbDqDsps4Jc76JESqx8qlVWP46TU3/7WW2Pd1iSSXw
-        5Gda+8uU0/AzAHCbtkBisz0ejpGTBYcIHsVrF8q2ohPQCbrRifZXSt1yIu+/Dp1wzueYAAh1UiCFvdln
-        mKdCYcytiBcqGWAByJheIbJIZw3wSbYPsO0Aymm2AczVSt1y0uEPe4ZjAuRoqUEYEhLn70g/x8lv3Gw2
-        eAUY1GQAAniPr+6STtYpe27kTZvPS97nhdP6pOgXDqnDKDohjeSYAPlT9p5zH06OKQsDcdr7N2gPc0o4
-        Ua0BbrT0S56a/wnXqTTdu1/ykdmh43cnULZT499S6pYTNV5Fp2s+2d/dC+NSmHv/T1LOMEjhZgeqtoSL
-        G/tYZZyo1gAXN/ZLnuANGbhDcMrG+QB87p7/14LfnXDkA5eVuuVEjbPo5BcBip/8WwpLPMs7pTQ5LS+v
-        70bhwllROD/OtrkBnmlyipzM5BZLzql4la87AKhYQzfa5jNK3XKiDkV04jIvjeKUXeRItPKRwivrawiI
-        NycTBzLkJCiesO0E6ATdoKNSt5yo8R463XENdkKvAKTCXDsONuzkGwDw5mQmmrvsFUBz49oBhwEKSt1y
-        osbKW0BVexLPecTlll6K35UdYK0AT/DmZCIzrXYLRELWHaVuOVGHik6w8EEVTpB4VOMEq4V0gsRTO0HI
-        csouOUFy0M7fncDBThrA1wkGzFPo5HfTM/emXZDIvjy84PfjFJqUgKrDYLWQYbBpPgwi5Dplo4KMOfmF
-        wYn5ivEbSt1yUi8wyKSBYwJkX+ETISQnSFJQhODO/otFahMZlXgj2ULS5ZRdTSKEa3dpgJDVpdQtp2pS
-        YZz+IMwzFSbg4NLYaNDvWyBB2R1zwlbg2oGqUmFq/CU6GSv8D0OFSXUY6tzLtgOJ5u6Kh6FKwNg0lFeF
-        EQ7wRfKByMOQt5HwkoZcASuMXyh1y0ne9+PenTr6XXXnDrwmhaIYyrUDGG+tNOV9/kwdq+EOJT0Y29NE
-        UcnHKeuCbHboKNsOoK4plQ+YmXA4/CWlLk/VFUR65gsiO14qa0fMNZXF43QMRQbHKemH1JY+ORY8LOLF
-        FkTg/WdREPmoMQURUDRo/BGdUUbimGlkh+2iyN0Jyr9d53BYHE8PW0muJFqaqU0mLWdeWSfQB30xBmPB
-        Q5bE3Nfw1A7ZmEPu2ImFbS706eUfNB5VanqTsyiKAwTHEEi0xEtFURyR3e2YvLuOB0emy+KZzZQnoNgh
-        4V0Wx5OfcvEB4PEhu3gdRVFvp11zURSk6wJ4s4tjqgEnKO/uCOmYt0NsNNK7yPHN2HeGfo4Y+Ie+J6y2
-        LA7SFyMdQUNcd2VdbuSOnLCfRI23QvUiua2vlI5XqgYjo1W1wNouRkA0SF6NvVLpVhhXY2fGbCPQSdGr
-        TtgIwOEWPr4oZeXfpgjkE/aA+VviGq/GQNuber9Lg2VIPOcTESRghNFROTHcEkmf4JEk1QVyspk9ByVv
-        qfx7Y/IEyPZVOFtKfa3s1lDXd5RatRExqP56nBSW94TqehzVmUZsCfC4+/4Z27jEOzf8ekXjNuR6HFTX
-        CxLkDHFdJSdMwM2RdFS1rAha2uAjr9zVCxJY+mnL/x5Qo2EvSIC21fOKTKshr8509QhAsQJZW+bFV6UX
-        x4sPeOlB4vk+WW7HMschC2mtHgdvD0frd//nRENfkdFU90tSlCvAH+izQy1ArT+3/6hIPGexvDksyUtS
-        miicLOo1OYSv7N8Pk/cepQzujKze4J5f4sqEKFw6J0vuqDNI3+Fzy8NhSV+T0zT/oqTRkBclGwX7RUnb
-        6S3Zi5Ka8PECCZLF00FyNn4ntaUGzhy4xrcfinmvPWD+Xk1zaYlS5UdIYAqCY3TQqPdl6cUAL0vvKoU6
-        M9nwPV+JHujX5TU90B9MOOmB/WTGTbV8NOXcLvj/vv5oyk0P7GdzHPl8OIkPJrWi+P//58PJh3Rf0bJl
-        /wUKU6/Cazu/5gAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAACsRJREFUeF7t
+        W+tzFMcR50OelaTyD6TyTir5F1KVSlXyPeV8d+wkH5yEu0Ngm5cF6AR2lUG6k6GKFCfpdlcvsOWARQCL
+        hw3CNshWbCKwADtGPA1YQrq3jjvKzqR/szOn1V7v3kMnxwS66ldS3cx0T/fOdPf07C57SA/pIT2kpaLw
+        H8yvRQLWbyJBq7k9aBmRoPkGYZJwk5BQwP+XCCfRpz1kPtMWNH6NsYrN/UU7l+/8ZjRgPE4KHSXkCaJO
+        YOyRSMh6rO3p3m8o9l9cii7v/nE0aMToaWedisRXGOLgqm5x6qku8f7qLnFlTae4Qbi11sb1tTH527nV
+        nbLPwZVx0U1jnDwiATND2LUtZP1IifviUMdK8/vtQXMPTfRTTDZKGGiKi1FS5mNScHZdrC5g7OmnuiUv
+        8FTGgIyB9kD395T4/x2Fw4NfiQSM9TShOUzuhaAhXqUnfX0RSnvh2pqYOES8XwiVDJGjFbE29kTsy2o6
+        ny91/NX4IS31f6rJiKFVcXGTljI3+UYCqwKytNxIyBxrC/b+QE3r8yFa7o9Eg1YaE+ikvXqe9jU32UrI
+        n31X5MffY9sqYYL8RSyk/ETASNHD+K2a3tISlh0J/Q8EY7lPr6t/ud9LXpbg2qrBJ4QhcpjSCDQnCqFr
+        1DSXhqIhY4MSJk4+Wd9Td2KxBtA4QY5Szws5hJpuY4m88HIIgDceI+/OTaRWNMoAAOakIwX9/YuadmMo
+        Guj5HTH+DMxrUT6x2RDZg8dEZvcBtt3PAJmBA3IseHDtHN55ukuvBAqVDfIJ21aYPyGG0uGNPNnNCnYD
+        k84dPi6K0x9JBQuXz7P9/AxQvDIh28AjN3xcJDZUJ3uEtqYyQmrRSZPM44PmOBjuI2fDCXQj3bVXFG9+
+        WFIu/+6YSLb3s339DJCM7hb5d94W9xKTsk/mxUNsPw57S47ROLMjtOOrSp3aiZi0gFEXhRt4XE5YCc2d
+        Ivf6SZqwUpxCXGr7Hr6vgp8BNJJt/SK777BIhKvfCrcpH+nUIZIOYUqd2ohi/c+IQRGO5UOKuZygEkj5
+        /Bg9LSg0MyknPLu+cnisxgBuJCMDNn+SybVrXKA52wYwC5FAz0+VWtUTDRwEg/2UdXECSoDyWKqkSPHW
+        BxWfuhP1GGDu5FtyTP706YpGns8Yrd1KreqoY3nvz2ngZ8i7Kx1mcq+N2MrTvse+5fpoJGjCyQ2GSId7
+        Rbq1r2QA/I/fkhsN6uMfZZJtA6J42/YxuaMjbB8NnDg77FXwaU2rgJa/BcsdqvD009377D1/55JIdXg/
+        eSieaukRmS0DC6AN4P4dfTGG4wWkdg6KIsmUxjOH2D4aB/QqCJhxpZ4/Pf9E7Ns0II+9f5UsyDEFkltM
+        ueQxiexe2pOudjjNGUJyQ1xkNi9UUMPLADb6RbLZfgDTiqcTiAoYW7xxUSQ2eT+oK7SCpQHoxLp1Tfxb
+        Sk1vioSMP2PA7iZ/r4vlhwnIw8z6hW1ThJ20fcyVppgKc8rZ8DfAgJhqHSAeBvEyxLT7pEkyEWkwHttw
+        QZsLqCdII4TMPyk1vYkOFMfQGVkVxwxIPGvREqQkh5Y/5/Tw5M0maXVSwBLpOlZAgsYYNBY8LHoY4OmW
+        k9zaK6MOtoNfxojCjDLAsFKTp+iqwa9TxwKW/y2GkQayPEwcoY9rx/6dDvcLixTYHrLEbB0GuEXjO2gV
+        WassMU1O0ssnIBqAR3boCNsOoOymzglzvokRKrHyqVVY/jpNTf/tZbY93WJJJfDkZ1r7y5TT8DMAcJu2
+        QGKzPR6OkZMFhwgexWsXyraiE9AJutGJ9ldK3XIi778OnXDO55gACHVSIIW92WeYp0JhzK2IFyoZYAHI
+        mF4hskhnDfBJtg+w7QDKabYBzNVK3XLS4Q97hmMC5GipQRgSEufvSD/HyW/cbDZ4BRjUZAACeI+v7pJO
+        1il7buRNm89L3ueF0/qk6BcOqcMoOiGN5JgA+VP2nnMfTo4pCwNx2vs3aA9zSjhRrQFutPRLnpr/Cdep
+        NN27X/KR2aHjdydQtlPj31LqlhM1XkWnaz7Z390L41KYe/9PUs4wSOFmB6q2hIsb+1hlnKjWABc39kue
+        4A0ZuENwysb5AHzunv/Xgt+dcOQDl5W65USNs+jkFwGKn/xbCks8yzulNDktL6/vRuHCWVE4P862uQGe
+        aXKKnMzkFkvOqXiVrzsAqFhDN9rmM0rdcqIORXTiMi+N4pRd5Ei08pHCK+trCIg3JxMHMuQkKJ6w7QTo
+        BN2go1K3nKjxHjrdcQ12Qq8ApMJcOw427OQbAPDmZCaau+wVQHPj2gGHAQpK3XKixspbQFV7Es95xOWW
+        XorflR1grQBP8OZkIjOtdgtEQtYdpW45UYeKTrDwQRVOkHhU4wSrhXSCxFM7Qchyyi45QXLQzt+dwMFO
+        GsDXCQbMU+jkd9Mz96ZdkMi+PLzg9+MUmpSAqsNgtZBhsGk+DCLkOmWjgow5+YXBifmK8RtK3XJSLzDI
+        pIFjAmRf4RMhJCdIUlCE4M7+i0VqExmVeCPZQtLllF1NIoRrd2mAkNWl1C2nalJhnP4gzDMVJuDg0tho
+        0O9bIEHZHXPCVuDagapSYWr8JToZK/wPQ4VJdRjq3Mu2A4nm7oqHoUrA2DSUV4URDvBF8oHIw5C3kfCS
+        hlwBK4xfKHXLSd73496dOvpddecOvCaFohjKtQMYb6005X3+TB2r4Q4lPRjb00RRyccp64Jsdugo2w6g
+        rimVD5iZcDj8JaUuT9UVRHrmCyI7XiprR8w1lcXjdAxFBscp6YfUlj45Fjws4sUWROD9Z1EQ+agxBRFQ
+        NGj8EZ1RRuKYaWSH7aLI3QnKv13ncFgcTw9bSa4kWpqpTSYtZ15ZJ9AHfTEGY8FDlsTc1/DUDtmYQ+7Y
+        iYVtLvTp5R80HlVqepOzKIoDBMcQSLTES0VRHJHd7Zi8u44HR6bL4pnNlCeg2CHhXRbHk59y8QHg8SG7
+        eB1FUW+nXXNRFKTrAnizi2OqASco7+4I6Zi3Q2w00rvI8c3Yd4Z+jhj4h74nrLYsDtIXIx1BQ1x3ZV1u
+        5I6csJ9EjbdC9SK5ra+UjleqBiOjVbXA2i5GQDRIXo29UulWGFdjZ8ZsI9BJ0atO2AjA4RY+vihl5d+m
+        COQT9oD5W+Iar8ZA25t6v0uDZUg85xMRJGCE0VE5MdwSSZ/gkSTVBXKymT0HJW+p/Htj8gTI9lU4W0p9
+        rezWUNd3lFq1ETGo/nqcFJb3hOp6HNWZRmwJ8Lj7/hnbuMQ7N/x6ReM25HocVNcLEuQMcV0lJ0zAzZF0
+        VLWsCFra4COv3NULElj6acv/HlCjYS9IgLbV84pMqyGvznT1CECxAllb5sVXpRfHiw946UHi+T5Zbscy
+        xyELaa0eB28PR+t3/+dEQ1+R0VT3S1KUK8Af6LNDLUCtP7f/qEg8Z7G8OSzJS1KaKJws6jU5hK/s3w+T
+        9x6lDO6MrN7gnl/iyoQoXDonS+6oM0jf4XPLw2FJX5PTNP+ipNGQFyUbBftFSdvpLdmLkprw8QIJksXT
+        QXI2fie1pQbOHLjGtx+Kea89YP5eTXNpiVLlR0hgCoJjdNCo92XpxQAvS+8qhToz2fA9X4ke6NflNT3Q
+        H0w46YH9ZMZNtXw05dwu+P++/mjKTQ/sZ3Mc+Xw4iQ8mtaL4///nw8mHdF/RsmX/BQpTr8JrO7/mAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="picCompaniesList.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
